Revert "refactoring getRequiredByKeyStartWith"
This reverts commit b8a6540b150f1bf9340793f1142bf1dae6afd3dd.